--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/static/react/dist/arxena-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-    <script type="module" crossorigin src="/static/react/dist/assets/index-T5ouN47s.js"></script>
-    <link rel="stylesheet" crossorigin href="/static/react/dist/assets/index-PcCGD_5m.css">
+    <title>Arxena's Org Charts (Global) - Arxena</title>
+    <!-- <link rel="icon" type="image/png" href="/static/react/dist/assets/quote1-uYMsCJ9Q.png" /> -->
+    <script type="module" crossorigin src="/static/react/dist/assets/index-itlf-5d5.js"></script>
+    <link rel="stylesheet" crossorigin href="/static/react/dist/assets/index-GL7YGt_4.css">
   </head>
   <body>
     <div id="root"></div>
